[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-prodguard-rl"
version = "1.0.0"
description = "ProdGuard-RL OpenEnv incident-response environment"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.115.12",
  "uvicorn>=0.35.0",
  "pydantic>=2.11.7",
  "requests==2.32.3",
  "openai>=2.7.2",
  "openenv-core>=0.2.2",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
py-modules = ["server", "env", "incident_types", "incident_models"]
